# LLP1

./: CMakeLists.txt  main.c  readme.md
benchmark/: benchmark.c  benchmark.h
configs/: bech-config.h  config.h
interaction-file/: file-io.c  file-io.h  mfile-io.c
interaction-graph/: crud.c  graph-db.h  storage-manager.c  storage-manager.h
structures-data/: types.h
structures-request/: data-interfaces.h  request-structures.h  response-structures.h
